$Id$

2017-12-13  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-c'.

	atacmds.cpp, atacmds.h: Change return type of capability checks to
	bool.  Declare simple checks inline.

2017-12-07  Christian Franke  <franke@computer.org>

	json.cpp: Avoid 'cbegin()' and 'cend()' to fix build with older
	libstdc++.

	json.cpp, json.h, smartctl.cpp, smartctl.8.in: Add '--json=s' option.
	Outputs JSON object elements sorted by key.
	Add '--json=g' option.  Outputs JSON structure suitable for grep.

2017-12-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-l sataphy'.

	smartctl.cpp: Add JSON support for '--scan'.
	Add similar device info to regular JSON output.
	ataprint.cpp, scsiprint.cpp: Remove now duplicate "protocol" element.

	smartctl.cpp: Silence false positive warnings from clang analyzer.

2017-12-02  Christian Franke  <franke@computer.org>

	Add initial support for smartctl JSON output mode (#766):
	json.cpp, json.h: New files with JSON support class.
	Makefile.am, os_win32/vc14/smartctl.vcxproj*: Add new files.
	ataprint.cpp: Add initial JSON support for -i, -H, -A and -l [x]error.
	scsiprint.cpp: Add initial JSON support for -i and -H.
	smartctl.cpp, smartctl.h: Add '-j, --json' option, global JSON object
	and new print functions.
	smartctl.8.in: Document new functionality.

	atacmds.cpp: Remove no longer needed variable 'must_swap'.

	os_win32.cpp: Remove include of smartctl.h, add extern declaration.
	Decode Windows Server 1709 build number.

	configure.ac, os_linux.cpp: Always include <sys/sysmacros.h> if available.
	This silences a 'deprecated' warning from glibc 2.25 headers.

2017-11-20  Alex Samorukov  <samm@os2.kiev.ua>

	os_netbsd.cpp (fix regressions in smartmontools 6.6)
	 - fix BE platforms support, tested on sparc64 (#943)
	 - fix name based device type detection (#943)
	 - Add byte-swapping for IDENTIFY command and remove related hacks from the
	   atacmds.cpp (#117)
